// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles click 1`] = `
.c1 {
  border: 1px solid black;
  border-radius: 100%;
  padding: 4px;
}

.c0 {
  padding: 5px;
  width: 70px;
  border: none;
  background: none;
  margin-right: 3px;
  margin-top: 27px;
  color: limegreen;
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  <svg
    className="c1"
    height="30"
    viewBox="0 0 500 500"
    width="30"
  >
    <path
      d="mockIcon"
    />
  </svg>
  <p>
    mockType
  </p>
</button>
`;

exports[`handles click 2`] = `
.c1 {
  border: 1px solid black;
  border-radius: 100%;
  padding: 4px;
}

.c0 {
  padding: 5px;
  width: 70px;
  border: none;
  background: none;
  margin-right: 3px;
  margin-top: 27px;
  color: darkred;
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  <svg
    className="c1"
    height="30"
    viewBox="0 0 500 500"
    width="30"
  >
    <path
      d="mockIcon"
    />
  </svg>
  <p>
    mockType
  </p>
</button>
`;

exports[`renders correctly 1`] = `
.c1 {
  border: 1px solid black;
  border-radius: 100%;
  padding: 4px;
}

.c0 {
  padding: 5px;
  width: 70px;
  border: none;
  background: none;
  margin-right: 3px;
  margin-top: 27px;
  color: limegreen;
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  <svg
    className="c1"
    height="30"
    viewBox="0 0 500 500"
    width="30"
  >
    <path
      d="mockIcon"
    />
  </svg>
  <p>
    mockType
  </p>
</button>
`;
